# Yumii

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  THIRD_PARTY_LICENSES.md  VISION.md  andvow.ipynb  install.ps1  install.sh  main.py  pyproject.toml
.github/scripts/: check_versions.py
.github/workflows/: ci.yml  publish-models.yml  release.yml
Experiments/: 02_groq_api_stt_alternative.py  03_audio_capture_v1_prototype.ipynb  04_audio_capture_v2_vad_integration.ipynb  05_audio_capture_v3_pipeline_dev.ipynb  06_audio_capture_v4_testing.ipynb  07_audio_capture_v5_final.ipynb  08_audio_pipeline_roadmap.ipynb  09_tts_elevenlabs_voice_selection.ipynb  10_tts_anime_voice_experiments.ipynb  11_tts_kokoro_local_test.ipynb  14_llm_prompt_engineering.ipynb  15_quick_prototype_demo.ipynb  16_misc_experiments.ipynb  17_stt_huggingface_api_test.ipynb  18_embeddings_voyageai_test.ipynb  20_camb_ai_tts_test.ipynb  Experiments.md
Yumi_Brain/prompts/: personality.txt
Yumi_Speaks/: tts.py
assets/prompts/: caring.txt  dandere.txt  genki.txt  kuudere.txt  tsundere.txt  yandere.txt
assets/webui/: index.html
desktop/: .gitignore
desktop/src-tauri/: Cargo.toml  tauri.bundle.conf.json  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: .gitignore  docs.json  introduction.mdx  mint.json  next.config.mjs  package-lock.json  package.json  quickstart.mdx  style.css
docs/app/: CodeBlock.tsx  CopyButton.tsx  DiscordLink.tsx  MDXPre.tsx  Sidebar.tsx  TableOfContents.tsx  ThemeToggle.tsx  TopNav.tsx  globals.css  layout.tsx  nav.ts  page.tsx
docs/app/(docs)/: layout.tsx
docs/content/: architecture.mdx  docs.json  introduction.mdx  quickstart.mdx  style.css  what-is-yumi.mdx
docs/content/capabilities/: custom-tools.mdx  memory-architecture.mdx  system-tools.mdx
docs/content/core-concepts/: key-features.mdx  what-is-yumi.mdx
docs/content/customization/: adding-avatars.mdx  custom-persona.mdx  parameter-mapping.mdx  personality-prompts.mdx
docs/content/development/: architecture.mdx  contributing.mdx  from-source.mdx  packaging.mdx
docs/content/get-started/: attuning-senses.mdx  first-conversation.mdx  installation.mdx  key-features.mdx  showcase.mdx  what-is-yumi.mdx  what-is-yumii.mdx
docs/content/guide/: dashboard.mdx  memory.mdx  personalities.mdx  talking.mdx  tools.mdx
docs/content/guides/: configuration.mdx  installation.mdx  personalities.mdx  troubleshooting.mdx  voice-setup.mdx
docs/content/installation/: developer-manual.mdx  linux.mdx  macos.mdx  windows.mdx  wsl2.mdx
docs/content/integration/: mcp-server.mdx  rest-api.mdx  websocket-protocol.mdx
docs/content/ops/: cli-commands.mdx  configuration-schemas.mdx  performance-tuning.mdx  troubleshooting.mdx
docs/content/providers/: llm.mdx  stt.mdx  tts.mdx
docs/content/reference/: api.mdx  cli.mdx  environments.mdx  events.mdx  files.mdx  settings.mdx  troubleshooting.mdx
docs/content/senses/: groq-whisper.mdx  local-whisper.mdx  structured-outputs.mdx  thinking-providers.mdx  vad.mdx  voice-synthesis.mdx
docs/guides/: configuration.mdx  installation.mdx
docs/reference/: api.mdx  cli.mdx
docs/src/app/: globals.css  layout.tsx  page.tsx
docs/src/components/: CinematicHero.tsx  Header.tsx  MDXComponents.tsx  NavigationSidebar.tsx  PageTransition.tsx  TableOfContents.tsx
docs/src/content/: index.mdx
docs/src/lib/: docs.ts
packaging/: fetch_models.py  yumii-server.spec  yumii_server.py
src/yumi/: __init__.py  __main__.py  cli.py
src/yumi/agent/: __init__.py  graph.py  llm.py  nodes.py  personality_manager.py  state.py
src/yumi/api/: __init__.py  server.py
src/yumi/audio/: __init__.py  stt.py  stt_factory.py  stt_providers.py
src/yumi/brain/: graph.py  llm.py  nodes.py
src/yumi/core/: __init__.py  config.py  credential_store.py  engine.py  global_config.py  interfaces.py  logging.py  types.py
src/yumi/engine/: graph.py
src/yumi/tools/: __init__.py  time_tool.py
src/yumi/tts/: __init__.py  camb_speaker.py  factory.py  speaker.py
src/yumi/webui/: index.html
src/yumii/: __init__.py  __main__.py  cli.py
src/yumii/agent/: __init__.py  fact_extractor.py  graph.py  llm.py  nodes.py  personality_manager.py  synthesizer.py
src/yumii/api/: __init__.py  server.py
src/yumii/audio/: __init__.py  silero_vad.py  stt.py  stt_factory.py  stt_providers.py  vosk_model.py  vosk_provider.py  whisper_model.py
src/yumii/core/: config.py  credential_store.py  engine.py  global_config.py  interfaces.py  logging.py  memory_db.py  memory_manager.py  models.py  session_manager.py  summarizer.py  transcript.py  types.py
src/yumii/tools/: __init__.py  composio_loader.py  mcp_config.py  mcp_loader.py  memory_tool.py  (+5 more)
testing models/: 01_basic_whisper_stt_test.py  05_audio_capture_v3_pipeline_dev.ipynb  06_audio_capture_v4_testing.ipynb  07_audio_capture_v5_final.ipynb  09_tts_elevenlabs_voice_selection.ipynb  12_tts_groq_orpheus_test.ipynb  13_tts_typecast_anime_test.ipynb  14_llm_prompt_engineering.ipynb  17_stt_huggingface_api_test.ipynb  18_embeddings_voyageai_test.ipynb  19_audio_capture_v6_additional.ipynb
tests/: test_agent_memory.py  test_audio_pipeline.py  test_basic.py  test_composio_loader.py  test_config.py  test_credential_store.py  test_duplicate_tool_calls.py  test_fact_extractor.py  test_first_run.py  test_global_config.py  test_graph.py  test_hitl.py  test_imports.py  test_kokoro_chunking.py  test_mcp_loader.py  test_memory_db.py  test_memory_manager.py  test_personality_manager.py  test_personality_switch.py  test_port_and_host.py  test_prompt_assembly.py  test_request_size_guards.py  test_schema_sanitizer.py  test_session_manager.py  test_session_summaries.py  test_silero_vad.py  test_state_types.py  test_streaming.py  test_synthesizer.py  test_synthesizer_think_strip.py  test_tool_narration.py  test_tool_registry.py  test_transcript_search.py  test_tts_streaming.py  test_whisper_model.py
webui/: index.html  test.html
(+38 files in other folders)
