[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yumi"
version = "0.1.0"
description = "Yumi - Your AI Companion"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "appdirs>=1.4.4",
    "elevenlabs>=2.38.1",
    "fastapi>=0.135.1",
    "faster-whisper>=1.2.1",
    "langchain>=1.2.18",
    "langchain-anthropic>=1.4.3",
    "langchain-core>=1.2.17",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.0.10",
    "numpy>=2.4.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.0.1",
    "questionary>=2.0.1",
    "rich>=15.0.0",
    "sounddevice>=0.5.5",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "typer>=0.25.1",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.1.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0"
]

[project.scripts]
yumi = "yumi.cli:app"

[tool.ruff]
exclude = ["Experiments", "Trash", ".git", ".venv", "__pycache__"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

# ---------------------------------------------------------------------------
# uv configuration
# ---------------------------------------------------------------------------
# Tell uv to pull torch from the CPU-only wheel index (no CUDA, ~220 MB
# instead of ~2 GB). Any contributor running `uv sync` gets the right build
# automatically without extra flags.
[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
