[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yumii"
version = "0.1.0"
description = "Yumii — Open-source, locally-runnable AI companion with Live2D avatar and real-time voice."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = ["ai", "companion", "live2d", "voice", "llm", "langgraph", "whisper", "anime"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
]
dependencies = [
    "appdirs>=1.4.4",
    "elevenlabs>=2.38.1",
    "fastapi>=0.135.1",
    "faster-whisper>=1.2.1",
    "langchain>=1.2.18",
    "langchain-anthropic>=1.4.3",
    "langchain-core>=1.2.17",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.0.10",
    "numpy>=2.4.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.0",
    "groq>=0.28.0",
    "keyring>=25.0.0",
    "prompt_toolkit>=3.0.36",
    "rich>=15.0.0",
    "sounddevice>=0.5.5",
    "structlog>=24.1.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "typer>=0.25.1",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
    "aiohttp>=3.13.5",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.1.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0"
]

[project.urls]
Homepage = "https://github.com/CodeNeuron58/Yumii"
Repository = "https://github.com/CodeNeuron58/Yumii"
Documentation = "https://github.com/CodeNeuron58/Yumii#readme"
"Bug Tracker" = "https://github.com/CodeNeuron58/Yumii/issues"

[project.scripts]
yumii = "yumii.cli:app"

[tool.hatch.build.targets.wheel]
# Explicitly include everything under src/yumii/ in the wheel,
# including non-Python assets (prompts, webui HTML).
packages = ["src/yumii"]

[tool.ruff]
exclude = ["Experiments", "Trash", ".git", ".venv", "__pycache__"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

# ---------------------------------------------------------------------------
# uv configuration
# ---------------------------------------------------------------------------
# Tell uv to pull torch from the CPU-only wheel index (no CUDA, ~220 MB
# instead of ~2 GB). Any contributor running `uv sync` gets the right build
# automatically without extra flags.
[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
