[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yumii"
version = "0.12.0"
description = "Yumii — a private, voice-first AI companion for your desktop. Talks in real time, does things, remembers you — all on your own machine."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = ["ai", "companion", "live2d", "voice", "llm", "langgraph", "whisper", "anime"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
]
dependencies = [
    "ddgs>=9.0.0",
    "elevenlabs>=2.38.1",
    "fastapi>=0.135.1",
    "faster-whisper>=1.2.1",
    "langchain>=1.3,<2.0",
    "langchain-anthropic>=1.4.3",
    "langchain-community>=0.3.0",
    "langchain-core>=1.4,<2.0",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2,<2.0",
    "langchain-mcp-adapters>=0.2.0",
    "numpy>=2.4.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.0",
    "groq>=0.28.0",
    "structlog>=24.1.0",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
    "aiohttp>=3.13.5",
    "aiosqlite>=0.20.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langgraph-prebuilt>=1.1,<2.0",
    "langgraph-checkpoint>=4.1,<5.0",
    "vosk>=0.3.45",
    "kokoro-onnx>=0.5.0",
    "composio>=0.13,<0.14",
    "composio-langchain>=0.13,<0.14",
    "langchain-ollama>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.1.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0"
]

[project.urls]
Homepage = "https://yumii.me"
Repository = "https://github.com/CodeNeuron58/Yumii"
Documentation = "https://yumii.me"
"Bug Tracker" = "https://github.com/CodeNeuron58/Yumii/issues"

[project.scripts]
yumii = "yumii.cli:main"

[tool.hatch.build.targets.wheel]
# Explicitly include everything under src/yumii/ in the wheel,
# including non-Python assets (prompts, webui HTML).
packages = ["src/yumii"]

[tool.ruff]
exclude = ["Experiments", "Trash", ".git", ".venv", "__pycache__"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]


